networkpolicies/blackduck-deny-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: blackduck-deny-all
spec:
  podSelector:
    matchLabels:
      app: blackduck
  ingress: []
